Alterações nas descrições dos carros da Nissan.

--- a/nissan.html
+++ b/nissan.html
@@ -88,7 +88,7 @@
                         alt="Card image">
                     <div class="card-body text-center d-flex flex-column">
                         <h4 class="card-title text-center">Skyline R34</h4>
-                        <p class="card-text">Lançada para comemorar o 40º aniversário da Ferrari, a F40 foi a última Ferrari supervisionada por Enzo Ferrari antes de sua morte.</p>
+                        <p class="card-text">O Nissan Skyline GT-R R34, produzido entre 1999 e 2002, é um carro esportivo japonês icônico conhecido por seu desempenho excepcional e design avançado.</p>
                         <a href="#R34" class="btn btn-primary mt-auto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Clique para ler mais!">Mais informações</a>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                         alt="Card image">
                     <div class="card-body text-center d-flex flex-column">
                         <h4 class="card-title text-center">Nissan 350Z</h4>
-                        <p class="card-text">Considerada uma das maiores Ferraris de todos os tempos, a 250 GTO é famosa por seu desempenho em corridas e seu design icônico.</p>
+                        <p class="card-text">O Nissan 350Z, lançado em 2002 é conhecido pelo seu design elegante, tração traseira e excelente manobrabilidade.</p>
                         <a href="#350z" class="btn btn-primary mt-auto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Clique para ler mais!">Mais informações</a>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                         alt="Card image">
                     <div class="card-body text-center d-flex flex-column">
                         <h4 class="card-title text-center">Nissan Leaf</h4>
-                        <p class="card-text">Um exemplo moderno da excelência da Ferrari em tecnologia e design, a LaFerrari é um hipercarro híbrido que combina um motor V12 com um sistema elétrico.</p>
+                        <p class="card-text">O Nissan Leaf, lançado em 2010, é um carro elétrico compacto e é conhecido por sua eficiência energética e zero emissões.</p>
                         <a href="#leaf" class="btn btn-primary mt-auto" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Clique para ler mais!">Mais informações</a>
                     </div>
                 </div>
